...

@Preview(showBackground = true)
@Composable
private fun SkillRowPreview() {
    DnDAppTheme {
        Column {
            SkillRow(Skill.ATHLETICS, Proficiency.NONE, {}, trailing = "+3")
            SkillRow(Skill.PERCEPTION, Proficiency.PROFICIENT, {}, trailing = "+4", isClassSkill = true)
            SkillRow(Skill.STEALTH, Proficiency.EXPERTISE, {}, trailing = "+7")
        }
    }
}

