...
@Preview(showBackground = true)
@Composable
private fun CreateCharacterContentPreview() {
    DnDAppTheme {
        CreateCharacterContent(
            uiState = CreateCharacterUiState(
                name = "Tordek",
                characterClass = CharacterClass.FIGHTER,
                level = "5",
                maxHitPoints = "44",
                skills = mapOf(Skill.ATHLETICS to Proficiency.PROFICIENT),
            ),
            onNameChange = {},
            onClassChange = {},
            onLevelChange = {},
            onMaxHitPointsChange = {},
...
